# OS-T

./: .gitignore  README.md
RogueOS-Core/: CMakeLists.txt
RogueOS-Core/desktop/: CMakeLists.txt
RogueOS-Core/esp32/: CMakeLists.txt
RogueOS-Core/live-build/auto/: build  config
RogueOS-Core/live-build/config/package-lists/: rogueos.list.chroot
RogueOS-Core/src/: main_desktop.cpp  main_esp32.cpp
RogueOS-Core/src/cli/: help.cpp  help.h  help.hpp  router.cpp  router.h
RogueOS-Core/src/modules/: command_router.cpp  command_router.hpp  serial_cli.cpp  serial_cli.hpp
RogueOS-Core/src/ui/webcli/: index.html
